<resources>
  <string name="app_name">Counter</string>
  <string name="num_0">0</string>
  <string name="num_1">1</string>
  <string name="num_2">2</string>
  <string name="num_3">3</string>
  <string name="num_4">4</string>
  <string name="num_5">5</string>
  <string name="num_6">6</string>
  <string name="num_7">7</string>
  <string name="num_8">8</string>
  <string name="num_9">9</string>
  <string name="num_Del">Del</string>
  <string name="colon">:</string>
  <string name="double_zero">00</string>
  <string name="ok">OK</string>
  <string name="next">Next</string>
  <string name="start">START</string>
</resources>
